@@ -139,7 +139,7 @@ public abstract class BasePublisherActor<T extends PublishTarget> extends Abstra
         responseDroppedMonitor = connectionMonitorRegistry.forResponseDropped(connection);
         responsePublishedMonitor = connectionMonitorRegistry.forResponsePublished(connection);
         responseAcknowledgedMonitor = connectionMonitorRegistry.forResponseAcknowledged(connection);
-        replyTargets = connection.getSources().stream().map(Source::getReplyTarget).collect(Collectors.toList());
+        replyTargets = connection.getSources().stream().map(Source::getReplyTarget).toList();
         acknowledgementSizeBudget = connectionConfig.getAcknowledgementConfig().getIssuedMaxBytes();
         logger = DittoLoggerFactory.getThreadSafeDittoLoggingAdapter(this)
                 .withMdcEntry(ConnectivityMdcEntryKey.CONNECTION_ID, connection.getId());
@@ -189,8 +189,8 @@ public abstract class BasePublisherActor<T extends PublishTarget> extends Abstra
                     final Collection<Acknowledgement> acknowledgements = new ArrayList<>();
                     final Collection<CommandResponse<?>> nonAcknowledgements = new ArrayList<>();
                     responsesList.forEach(response -> {
-                        if (response instanceof Acknowledgement) {
-                            acknowledgements.add((Acknowledgement) response);
+                        if (response instanceof Acknowledgement acknowledgement) {
+                            acknowledgements.add(acknowledgement);
                         } else {
                             nonAcknowledgements.add(response);
                         }
@@ -258,7 +258,7 @@ public abstract class BasePublisherActor<T extends PublishTarget> extends Abstra
                 .thenApply(aVoid -> Arrays.stream(futures)
                         .map(CompletableFuture::join)
                         .filter(Objects::nonNull)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     private Acknowledgements appendConnectionId(final Acknowledgements acknowledgements) {
@@ -269,7 +269,7 @@ public abstract class BasePublisherActor<T extends PublishTarget> extends Abstra
             final ConnectionId connectionId) {
         final List<Acknowledgement> acksList = acknowledgements.stream()
                 .map(ack -> appendConnectionIdToAcknowledgementOrResponse(ack, connectionId))
-                .collect(Collectors.toList());
+                .toList();
         // Uses EntityId and StatusCode from input acknowledges expecting these were set when Acknowledgements was created
         return Acknowledgements.of(acknowledgements.getEntityId(), acksList, acknowledgements.getHttpStatus(),
                 acknowledgements.getDittoHeaders());
@@ -323,7 +323,7 @@ public abstract class BasePublisherActor<T extends PublishTarget> extends Abstra
                                     outboundTargets);
                             return getSendingContextForTarget(outbound, target);
                         })
-                        .collect(Collectors.toList()));
+                        .toList());
 
 
         if (sendingContexts.isEmpty()) {
